--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "index.ts",
   "scripts": {
     "build": "tsc --build",
-    "run": "ts-node ./src/",
+    "run": "ts-node ./src/ | pino-pretty",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "pino": "^9.6.0",
     "zeromq": "^6.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
+    "pino-pretty": "^13.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
