--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@whatwg-node/server": "^0.10.5",
     "itty-router": "^5.0.18",
     "pino": "^9.6.0",
+    "socket.io": "^4.8.1",
     "zeromq": "^6.3.0"
   },
   "devDependencies": {
