Update image name to match repository

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -14,7 +14,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: jamesgawn/eddl
+          images: jamesgawn/eddi
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
