--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -3,6 +3,9 @@ on:
   push:
     tags:
       - "v*.*.*"
+permissions:
+  contents: read
+  packages: write
 jobs:
   docker-publish:
     name: Build & Publish Docker
