Change backend build so it now triggers on main branch

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,8 +1,8 @@
 name: Publish Pipeline
 on:
   push:
-    tags:
-      - "v*.*.*"
+    branches:
+      - main
 permissions:
   contents: read
   packages: write
