--- a/Dockerfile-backend
+++ b/Dockerfile-backend
@@ -2,16 +2,18 @@
 FROM node:23.11.0 AS build
 
 # Set the working directory inside the container
-WORKDIR /app
+WORKDIR /app/backend
+RUN mkdir /app/shared
 
 # Copy package.json and package-lock.json to the working directory
-COPY package.json package-lock.json ./
+COPY backend/package.json backend/package-lock.json ./
 
 # Install dependencies
 RUN npm install
 
 # Copy the rest of the application code to the working directory
-COPY . .
+COPY backend /app/backend
+COPY shared /app/shared
 
 # Build the TypeScript code
 RUN npm run build
@@ -19,12 +21,12 @@ RUN npm run build
 FROM node:23.11.0-alpine
 
 # Set the working directory inside the container
-WORKDIR /app
+WORKDIR /app/backend
 
 # Copy the built application from the build stage
-COPY --from=build /app/dist ./dist
-COPY --from=build /app/package.json .
-COPY --from=build /app/package-lock.json .
+COPY --from=build /app/backend/dist ./dist
+COPY --from=build /app/backend/package.json .
+COPY --from=build /app/backend/package-lock.json .
 
 # Install only production dependencies
 RUN npm install --omit=dev
@@ -34,4 +36,4 @@ EXPOSE 3001
 ENV HTTP_PORT=3001
 
 # Define the command to run the application
-CMD ["node", "dist/index.js"]
+CMD ["node", "dist/backend/src/index.js"]
