--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          file: ./Dockerfile-backend
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
