--- a/Dockerfile-backend
+++ b/Dockerfile-backend
@@ -23,6 +23,10 @@ FROM node:24.0.1-alpine
 # Set the working directory inside the container
 WORKDIR /app/backend
 
+# Create a directory for sqlite database
+RUN mkdir /data
+ENV DB_FILE_PATH=/data/eddsi-db.sqlite
+
 # Copy the built application from the build stage
 COPY --from=build /app/backend/dist ./dist
 COPY --from=build /app/backend/package.json .
