--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -17,7 +17,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository_owner }}/eddi-backend
+          images: ghcr.io/${{ github.event.repository.name }}
           tags: type=raw,latest
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
